Add 403 and role_code docs to register spec
