# docs/swagger.json
@@ -164,6 +164,15 @@
                             }
                         }
                     },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
                     "409": {
                         "description": "Conflict",
                         "schema": {
@@ -318,7 +327,13 @@
                     "minLength": 8
                 },
                 "role_code": {
-                    "type": "string"
+                    "description": "Allowed: read-only, demo-user",
+                    "type": "string",
+                    "enum": [
+                        "read-only",
+                        "demo-user"
+                    ],
+                    "example": "read-only"
                 },
                 "username": {
                     "type": "string",
